codehub/code-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: ghcr.io/vivsoftorg/codehub:0.0.1
        # image: codercom/code-server
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /home/coder/projects
          name: persistent-storage
      volumes:
      - name: persistent-storage
        emptyDir: {}  # Use PVC for persistence
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
spec:
  selector:
    app: code-server
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer  # Or NodePort/ClusterIP
