codehub/virtual-service-codehub.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: codehub
  name: codehub
  namespace: codehub
spec:
  gateways:
  - istio-system/public-gateway
  hosts:
  - codehub.vivplatform.io
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: proxy-public
        port:
          number: 80
